--- a/Scratch.ipynb
+++ b/Scratch.ipynb
@@ -2,69 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "97a7de3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import numpy as np\n",
+    "import h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "00cc8048",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['.DS_Store',\n",
-       " 'Scratch.ipynb',\n",
-       " 'vrt',\n",
-       " '.ipynb_checkpoints',\n",
-       " 'Data',\n",
-       " 'Reference']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3bb82bdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import vrt.models.network_vrt as vrt_network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "755ea320",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/davidzhu/Desktop/UCI/Courses/CS-216/image-venv/lib/python3.8/site-packages/torch/functional.py:568: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  /Users/distiller/project/pytorch/aten/src/ATen/native/TensorShape.cpp:2228.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-      "/Users/davidzhu/Desktop/UCI/Courses/CS-216/Project/vrt/models/network_vrt.py:716: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
-      "  dim_t = temperature ** (2 * (dim_t // 2) / num_pos_feats)\n"
+      "[[ 1.00000e+00 -1.27500e+01 -1.28750e+01 ... -3.88125e+01 -3.80625e+01\n",
+      "  -2.91875e+01]\n",
+      " [ 2.57000e+02 -2.43750e+01 -2.31875e+01 ... -3.05000e+01 -3.65625e+01\n",
+      "  -3.54375e+01]\n",
+      " [ 5.13000e+02 -3.81250e+01 -4.33125e+01 ... -4.54375e+01 -4.49375e+01\n",
+      "  -4.02500e+01]\n",
+      " ...\n",
+      " [-2.04790e+04 -3.10625e+01 -3.45000e+01 ... -3.23750e+01 -3.38125e+01\n",
+      "  -3.11250e+01]\n",
+      " [-2.02230e+04 -3.03750e+01 -3.16875e+01 ... -3.08125e+01 -3.21875e+01\n",
+      "  -2.93125e+01]\n",
+      " [-1.99670e+04 -2.88750e+01 -3.05625e+01 ... -3.20000e+01 -3.05625e+01\n",
+      "  -2.72500e+01]]\n"
      ]
     }
    ],
    "source": [
-    "model = vrt_network.VRT()"
+    "for split in ['train']:\n",
+    "    with h5py.File(os.path.join(split, os.listdir(split)), 'r') as f:\n",
+    "        f.get('radar')[()]"
    ]
   },
   {
@@ -78,9 +55,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "image-venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "image-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -92,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
