--- a/Bidirectional.ipynb
+++ b/Bidirectional.ipynb
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fb00dd54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = 'idrad'\n",
-    "# DATA_DIR = '/Users/davidzhu/Desktop/IDRad/idrad'\n",
+    "# DATA_DIR = 'idrad'\n",
+    "DATA_DIR = '/Users/davidzhu/Desktop/IDRad/idrad'\n",
     "DEFAULT_FILE = 'train/target5_001.hdf5'"
    ]
   },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a036b966",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "aefcc3f7",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9b09f544",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "98ecd54f",
    "metadata": {},
    "outputs": [],
@@ -204,97 +204,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ef8c7fc0",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 8,
+   "id": "d27b2e73",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_files = os.listdir(f'{DATA_DIR}/train')\n",
-    "dataset = [] \n",
-    "labels = []\n",
-    "labels_hot = [] \n",
-    "labels_repeat = [] \n",
-    "labels_hot_repeat = [] \n",
+    "def load_data(dataset_files, s): \n",
+    "    dataset = [] \n",
+    "    labels = []\n",
+    "    labels_hot = [] \n",
+    "    labels_repeat = [] \n",
+    "    labels_hot_repeat = [] \n",
     "\n",
-    "for fname in dataset_files: \n",
-    "    if fname[:2] == '._':\n",
-    "        print(fname)\n",
-    "        continue \n",
-    "        \n",
-    "    labels.append(int(fname[6]))\n",
-    "    labels_hot.append(copy(hot_dict[labels[-1]]))\n",
+    "    for fname in dataset_files: \n",
+    "        if fname[:2] == '._':\n",
+    "            print(fname)\n",
+    "            continue \n",
+    "\n",
+    "        labels.append(int(fname[6]))\n",
+    "        labels_hot.append(copy(hot_dict[labels[-1]]))\n",
+    "\n",
+    "        dataset.append(get_range_doppler(f'{s}/{fname}'))\n",
+    "\n",
+    "        labels_repeat.append(np.repeat(labels[-1], dataset[-1].shape[0] ))\n",
+    "        labels_hot_repeat.append(np.repeat(labels_hot[-1][np.newaxis, :], dataset[-1].shape[0], axis=0 ))\n",
+    "\n",
+    "    # dataset = np.array(dataset) \n",
+    "    labels = np.array(labels)\n",
+    "    labels_hot = np.array(labels_hot)\n",
+    "\n",
+    "    dataset = np.array(dataset, dtype = object)\n",
+    "\n",
+    "    labels_repeat = np.array(labels_repeat, dtype = object)\n",
+    "    labels_hot_repeat = np.array(labels_hot_repeat, dtype = object)\n",
     "    \n",
-    "    dataset.append(get_range_doppler(f'train/{fname}'))\n",
+    "    labels2, labels_hot2, dataset2, labels_repeat2, labels_hot_repeat2 = np.empty((labels.shape[0]), dtype = object), np.empty((labels.shape[0]), dtype = object), np.empty((labels.shape[0]), dtype = object), np.empty((labels.shape[0]), dtype = object), np.empty((labels.shape[0]), dtype = object)\n",
     "    \n",
-    "    labels_repeat.append(np.repeat(labels[-1], dataset[-1].shape[0] ))\n",
-    "    labels_hot_repeat.append(np.repeat(labels_hot[-1][np.newaxis, :], dataset[-1].shape[0], axis=0 ))\n",
-    "\n",
-    "# dataset = np.array(dataset) \n",
-    "labels = np.array(labels)\n",
-    "labels_hot = np.array(labels_hot)\n",
-    "\n",
-    "dataset = np.array(dataset, dtype = object)\n",
-    "\n",
-    "labels_repeat = np.array(labels_repeat, dtype = object)\n",
-    "labels_hot_repeat = np.array(labels_hot_repeat, dtype = object)"
+    "    labels2[:] = list(labels)\n",
+    "    labels_hot2[:] = list(labels_hot)\n",
+    "    dataset2[:] = list(dataset)\n",
+    "    labels_repeat2[:] = list(labels_repeat)\n",
+    "    labels_hot_repeat2[:] = list(labels_hot_repeat)\n",
+    "    \n",
+    "    return labels2, labels_hot2, dataset2, labels_repeat2, labels_hot_repeat2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "77651e42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_labels, test_labels_hot, test_dataset, test_labels_repeat, test_labels_hot_repeat = load_data(os.listdir(f'{DATA_DIR}/test'), 'test')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b44ee442",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "bfa41ff0",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = np.array(dataset, dtype = object)"
+    "train_labels, train_labels_hot, train_dataset, train_labels_repeat, train_labels_hot_repeat = load_data(os.listdir(f'{DATA_DIR}/train'), 'train')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45a0a3c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "91b44737",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(130,)\n",
-      "(130,)\n",
-      "(130,)\n",
-      "(179, 5)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dataset.shape)\n",
-    "print(labels.shape)\n",
-    "print(labels_repeat.shape)\n",
-    "print(labels_hot_repeat[0].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "504f2feb",
+   "id": "5910c425",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os.path import isfile"
+    "valid_labels, valid_labels_hot, valid_dataset, valid_labels_repeat, valid_labels_hot_repeat = load_data(os.listdir(f'{DATA_DIR}/valid'), 'valid')\n"
    ]
   },
   {
@@ -307,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "10043488",
    "metadata": {},
    "outputs": [],
@@ -317,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "e9a79e3f",
    "metadata": {},
    "outputs": [],
@@ -327,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "0467c1bc",
    "metadata": {},
    "outputs": [],
@@ -347,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "e7258097",
    "metadata": {},
    "outputs": [],
@@ -357,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "582fd981",
    "metadata": {},
    "outputs": [],
@@ -368,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "67c80351",
    "metadata": {},
    "outputs": [],
@@ -382,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "a6171882",
    "metadata": {},
    "outputs": [],
@@ -397,13 +379,13 @@
     "                  'bidirectional': True, #bidirectional \n",
     "                  'k_rec': layer2_size / 10, # optimal is 200 for 1000 layer size \n",
     "                  'alpha': 0.1, # figure 6, tuned with k_in\n",
-    "#                   'random_state': 1, # \n",
+    "                  'random_state': 1, # \n",
     "                  'requires_sequence': True}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "60a03477",
    "metadata": {},
    "outputs": [],
@@ -411,153 +393,67 @@
     "l1 = Pipeline([\n",
     "    ('i2n', i2n), \n",
     "              ])\n",
-    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer2_size, leakage=.05)),\n",
-    "               ('layer2', NodeToNode(hidden_layer_size=layer2_size, leakage=.05))])\n",
-    "n2o = ESNClassifier(**initial_params, input_to_node=l1, node_to_node=n2n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "69d1ed70",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ESNClassifier(input_to_node=Pipeline(steps=[('i2n', InputToNode())]),\n",
-       "              node_to_node=Pipeline(steps=[('layer1', NodeToNode(leakage=0.05)),\n",
-       "                                           ('layer2',\n",
-       "                                            NodeToNode(leakage=0.05))]),\n",
-       "              regressor=IncrementalRegression(alpha=0.1),\n",
-       "              requires_sequence=True)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n2o.fit(dataset, labels_repeat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "97bdb721",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = n2o.predict(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "d4dcc66d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correct = []\n",
-    "for i, prediction in enumerate(predictions):  \n",
-    "    \n",
-    "    correct.append((prediction == labels[i]).mean())\n",
-    "\n",
-    "correct = np.array(correct)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "3dc80420",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6478194175820455"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "correct.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "36b4941a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions_p = n2o.predict_proba(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "d321da2b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((130,), (179, 5))"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions_p.shape, predictions_p[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "831b5ef6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = [0,0,0,0,0]\n",
-    "\n",
-    "for p in predictions: \n",
-    "    for i in range(5): \n",
-    "        x[i] += (p == i+1).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "6db22ba9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[15908, 21951, 16946, 18818, 22027]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
+    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer2_size, leakage=.05, bidirectional = False)),\n",
+    "               ('layer2', NodeToNode(hidden_layer_size=layer2_size, leakage=.05, bidirectional = False))])\n",
+    "n2o = ESNClassifier(input_to_node=l1, node_to_node=n2n)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a371d545",
+   "id": "69d1ed70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n2o.fit(train_dataset, train_labels_repeat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde4bd7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_accuracy(model, data, data_labels): \n",
+    "    predictions = model.predict(data)\n",
+    "    \n",
+    "    correct = []\n",
+    "    for i, prediction in enumerate(predictions):  \n",
+    "\n",
+    "        correct.append((prediction == data_labels[i]).mean())\n",
+    "\n",
+    "    correct = np.array(correct)\n",
+    "    \n",
+    "    print(correct.mean())\n",
+    "    \n",
+    "    return predictions, correct.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23133fd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_predictions, train_acc = get_accuracy(n2o, train_dataset, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbccd355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predictions, test_acc = get_accuracy(n2o, test_dataset, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "101dba11",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -565,7 +461,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0336b5d",
+   "id": "c35d345e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47ffbed6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c30597",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56836d93",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -824,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -838,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
