fixed dataset dtype issue

--- a/Bidirectional.ipynb
+++ b/Bidirectional.ipynb
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d27b2e73",
+   "id": "511647f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "77651e42",
+   "id": "9d5a3159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bfa41ff0",
+   "id": "eed241b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,10 +271,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5910c425",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 24,
+   "id": "499d5ad8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preprocessing\n",
+      "Finished frame 1 of 4507.\n",
+      "Finished frame 101 of 4507.\n",
+      "Finished frame 201 of 4507.\n",
+      "Finished frame 301 of 4507.\n",
+      "Finished frame 401 of 4507.\n",
+      "Finished frame 501 of 4507.\n",
+      "Finished frame 601 of 4507.\n",
+      "Finished frame 701 of 4507.\n",
+      "Finished frame 801 of 4507.\n",
+      "Finished frame 901 of 4507.\n",
+      "Finished frame 1001 of 4507.\n",
+      "Finished frame 1101 of 4507.\n",
+      "Finished frame 1201 of 4507.\n",
+      "Finished frame 1301 of 4507.\n",
+      "Finished frame 1401 of 4507.\n",
+      "Finished frame 1501 of 4507.\n",
+      "Finished frame 1601 of 4507.\n",
+      "Finished frame 1701 of 4507.\n",
+      "Finished frame 1801 of 4507.\n",
+      "Finished frame 1901 of 4507.\n",
+      "Finished frame 2001 of 4507.\n",
+      "Finished frame 2101 of 4507.\n",
+      "Finished frame 2201 of 4507.\n",
+      "Finished frame 2301 of 4507.\n",
+      "Finished frame 2401 of 4507.\n",
+      "Finished frame 2501 of 4507.\n",
+      "Finished frame 2601 of 4507.\n",
+      "Finished frame 2701 of 4507.\n",
+      "Finished frame 2801 of 4507.\n",
+      "Finished frame 2901 of 4507.\n",
+      "Finished frame 3001 of 4507.\n",
+      "Finished frame 3101 of 4507.\n",
+      "Finished frame 3201 of 4507.\n",
+      "Finished frame 3301 of 4507.\n",
+      "Finished frame 3401 of 4507.\n",
+      "Finished frame 3501 of 4507.\n",
+      "Finished frame 3601 of 4507.\n",
+      "Finished frame 3701 of 4507.\n",
+      "Finished frame 3801 of 4507.\n",
+      "Finished frame 3901 of 4507.\n",
+      "Finished frame 4001 of 4507.\n",
+      "Finished frame 4101 of 4507.\n",
+      "Finished frame 4201 of 4507.\n",
+      "Finished frame 4301 of 4507.\n",
+      "Finished frame 4401 of 4507.\n",
+      "Finished frame 4501 of 4507.\n",
+      "preprocessing\n",
+      "Finished frame 1 of 4507.\n",
+      "Finished frame 101 of 4507.\n",
+      "Finished frame 201 of 4507.\n",
+      "Finished frame 301 of 4507.\n",
+      "Finished frame 401 of 4507.\n",
+      "Finished frame 501 of 4507.\n",
+      "Finished frame 601 of 4507.\n",
+      "Finished frame 701 of 4507.\n",
+      "Finished frame 801 of 4507.\n",
+      "Finished frame 901 of 4507.\n",
+      "Finished frame 1001 of 4507.\n",
+      "Finished frame 1101 of 4507.\n",
+      "Finished frame 1201 of 4507.\n",
+      "Finished frame 1301 of 4507.\n",
+      "Finished frame 1401 of 4507.\n",
+      "Finished frame 1501 of 4507.\n",
+      "Finished frame 1601 of 4507.\n",
+      "Finished frame 1701 of 4507.\n",
+      "Finished frame 1801 of 4507.\n",
+      "Finished frame 1901 of 4507.\n",
+      "Finished frame 2001 of 4507.\n",
+      "Finished frame 2101 of 4507.\n",
+      "Finished frame 2201 of 4507.\n",
+      "Finished frame 2301 of 4507.\n",
+      "Finished frame 2401 of 4507.\n",
+      "Finished frame 2501 of 4507.\n",
+      "Finished frame 2601 of 4507.\n",
+      "Finished frame 2701 of 4507.\n",
+      "Finished frame 2801 of 4507.\n",
+      "Finished frame 2901 of 4507.\n",
+      "Finished frame 3001 of 4507.\n",
+      "Finished frame 3101 of 4507.\n",
+      "Finished frame 3201 of 4507.\n",
+      "Finished frame 3301 of 4507.\n",
+      "Finished frame 3401 of 4507.\n",
+      "Finished frame 3501 of 4507.\n",
+      "Finished frame 3601 of 4507.\n",
+      "Finished frame 3701 of 4507.\n",
+      "Finished frame 3801 of 4507.\n",
+      "Finished frame 3901 of 4507.\n",
+      "Finished frame 4001 of 4507.\n",
+      "Finished frame 4101 of 4507.\n",
+      "Finished frame 4201 of 4507.\n",
+      "Finished frame 4301 of 4507.\n",
+      "Finished frame 4401 of 4507.\n",
+      "Finished frame 4501 of 4507.\n",
+      "preprocessing\n",
+      "Finished frame 1 of 4507.\n",
+      "Finished frame 101 of 4507.\n",
+      "Finished frame 201 of 4507.\n",
+      "Finished frame 301 of 4507.\n",
+      "Finished frame 401 of 4507.\n",
+      "Finished frame 501 of 4507.\n",
+      "Finished frame 601 of 4507.\n",
+      "Finished frame 701 of 4507.\n",
+      "Finished frame 801 of 4507.\n",
+      "Finished frame 901 of 4507.\n",
+      "Finished frame 1001 of 4507.\n",
+      "Finished frame 1101 of 4507.\n",
+      "Finished frame 1201 of 4507.\n",
+      "Finished frame 1301 of 4507.\n",
+      "Finished frame 1401 of 4507.\n",
+      "Finished frame 1501 of 4507.\n",
+      "Finished frame 1601 of 4507.\n",
+      "Finished frame 1701 of 4507.\n",
+      "Finished frame 1801 of 4507.\n",
+      "Finished frame 1901 of 4507.\n",
+      "Finished frame 2001 of 4507.\n",
+      "Finished frame 2101 of 4507.\n",
+      "Finished frame 2201 of 4507.\n",
+      "Finished frame 2301 of 4507.\n",
+      "Finished frame 2401 of 4507.\n",
+      "Finished frame 2501 of 4507.\n",
+      "Finished frame 2601 of 4507.\n",
+      "Finished frame 2701 of 4507.\n",
+      "Finished frame 2801 of 4507.\n",
+      "Finished frame 2901 of 4507.\n",
+      "Finished frame 3001 of 4507.\n",
+      "Finished frame 3101 of 4507.\n",
+      "Finished frame 3201 of 4507.\n",
+      "Finished frame 3301 of 4507.\n",
+      "Finished frame 3401 of 4507.\n",
+      "Finished frame 3501 of 4507.\n",
+      "Finished frame 3601 of 4507.\n",
+      "Finished frame 3701 of 4507.\n",
+      "Finished frame 3801 of 4507.\n",
+      "Finished frame 3901 of 4507.\n",
+      "Finished frame 4001 of 4507.\n",
+      "Finished frame 4101 of 4507.\n",
+      "Finished frame 4201 of 4507.\n",
+      "Finished frame 4301 of 4507.\n",
+      "Finished frame 4401 of 4507.\n",
+      "Finished frame 4501 of 4507.\n",
+      "preprocessing\n",
+      "Finished frame 1 of 4507.\n",
+      "Finished frame 101 of 4507.\n",
+      "Finished frame 201 of 4507.\n",
+      "Finished frame 301 of 4507.\n",
+      "Finished frame 401 of 4507.\n",
+      "Finished frame 501 of 4507.\n",
+      "Finished frame 601 of 4507.\n",
+      "Finished frame 701 of 4507.\n",
+      "Finished frame 801 of 4507.\n",
+      "Finished frame 901 of 4507.\n",
+      "Finished frame 1001 of 4507.\n",
+      "Finished frame 1101 of 4507.\n",
+      "Finished frame 1201 of 4507.\n",
+      "Finished frame 1301 of 4507.\n",
+      "Finished frame 1401 of 4507.\n",
+      "Finished frame 1501 of 4507.\n",
+      "Finished frame 1601 of 4507.\n",
+      "Finished frame 1701 of 4507.\n",
+      "Finished frame 1801 of 4507.\n",
+      "Finished frame 1901 of 4507.\n",
+      "Finished frame 2001 of 4507.\n",
+      "Finished frame 2101 of 4507.\n",
+      "Finished frame 2201 of 4507.\n",
+      "Finished frame 2301 of 4507.\n",
+      "Finished frame 2401 of 4507.\n",
+      "Finished frame 2501 of 4507.\n",
+      "Finished frame 2601 of 4507.\n",
+      "Finished frame 2701 of 4507.\n",
+      "Finished frame 2801 of 4507.\n",
+      "Finished frame 2901 of 4507.\n",
+      "Finished frame 3001 of 4507.\n",
+      "Finished frame 3101 of 4507.\n",
+      "Finished frame 3201 of 4507.\n",
+      "Finished frame 3301 of 4507.\n",
+      "Finished frame 3401 of 4507.\n",
+      "Finished frame 3501 of 4507.\n",
+      "Finished frame 3601 of 4507.\n",
+      "Finished frame 3701 of 4507.\n",
+      "Finished frame 3801 of 4507.\n",
+      "Finished frame 3901 of 4507.\n",
+      "Finished frame 4001 of 4507.\n",
+      "Finished frame 4101 of 4507.\n",
+      "Finished frame 4201 of 4507.\n",
+      "Finished frame 4301 of 4507.\n",
+      "Finished frame 4401 of 4507.\n",
+      "Finished frame 4501 of 4507.\n",
+      "preprocessing\n",
+      "Finished frame 1 of 4507.\n",
+      "Finished frame 101 of 4507.\n",
+      "Finished frame 201 of 4507.\n",
+      "Finished frame 301 of 4507.\n",
+      "Finished frame 401 of 4507.\n",
+      "Finished frame 501 of 4507.\n",
+      "Finished frame 601 of 4507.\n",
+      "Finished frame 701 of 4507.\n",
+      "Finished frame 801 of 4507.\n",
+      "Finished frame 901 of 4507.\n",
+      "Finished frame 1001 of 4507.\n",
+      "Finished frame 1101 of 4507.\n",
+      "Finished frame 1201 of 4507.\n",
+      "Finished frame 1301 of 4507.\n",
+      "Finished frame 1401 of 4507.\n",
+      "Finished frame 1501 of 4507.\n",
+      "Finished frame 1601 of 4507.\n",
+      "Finished frame 1701 of 4507.\n",
+      "Finished frame 1801 of 4507.\n",
+      "Finished frame 1901 of 4507.\n",
+      "Finished frame 2001 of 4507.\n",
+      "Finished frame 2101 of 4507.\n",
+      "Finished frame 2201 of 4507.\n",
+      "Finished frame 2301 of 4507.\n",
+      "Finished frame 2401 of 4507.\n",
+      "Finished frame 2501 of 4507.\n",
+      "Finished frame 2601 of 4507.\n",
+      "Finished frame 2701 of 4507.\n",
+      "Finished frame 2801 of 4507.\n",
+      "Finished frame 2901 of 4507.\n",
+      "Finished frame 3001 of 4507.\n",
+      "Finished frame 3101 of 4507.\n",
+      "Finished frame 3201 of 4507.\n",
+      "Finished frame 3301 of 4507.\n",
+      "Finished frame 3401 of 4507.\n",
+      "Finished frame 3501 of 4507.\n",
+      "Finished frame 3601 of 4507.\n",
+      "Finished frame 3701 of 4507.\n",
+      "Finished frame 3801 of 4507.\n",
+      "Finished frame 3901 of 4507.\n",
+      "Finished frame 4001 of 4507.\n",
+      "Finished frame 4101 of 4507.\n",
+      "Finished frame 4201 of 4507.\n",
+      "Finished frame 4301 of 4507.\n",
+      "Finished frame 4401 of 4507.\n",
+      "Finished frame 4501 of 4507.\n"
+     ]
+    }
+   ],
    "source": [
     "valid_labels, valid_labels_hot, valid_dataset, valid_labels_repeat, valid_labels_hot_repeat = load_data(os.listdir(f'{DATA_DIR}/valid'), 'valid')\n"
    ]
@@ -385,6 +629,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "51057305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bid = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "60a03477",
    "metadata": {},
@@ -393,25 +647,40 @@
     "l1 = Pipeline([\n",
     "    ('i2n', i2n), \n",
     "              ])\n",
-    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer2_size, leakage=.05, bidirectional = False)),\n",
-    "               ('layer2', NodeToNode(hidden_layer_size=layer2_size, leakage=.05, bidirectional = False))])\n",
+    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer2_size, leakage=.05, bidirectional = bid)),\n",
+    "               ('layer2', NodeToNode(hidden_layer_size=layer2_size * 2 ** bid, leakage=.05, bidirectional = bid))])\n",
     "n2o = ESNClassifier(input_to_node=l1, node_to_node=n2n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "69d1ed70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ESNClassifier(input_to_node=Pipeline(steps=[('i2n', InputToNode())]),\n",
+       "              node_to_node=Pipeline(steps=[('layer1', NodeToNode(leakage=0.05)),\n",
+       "                                           ('layer2',\n",
+       "                                            NodeToNode(leakage=0.05))]),\n",
+       "              regressor=IncrementalRegression(), requires_sequence=True)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n2o.fit(train_dataset, train_labels_repeat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fde4bd7f",
+   "execution_count": 20,
+   "id": "9c0e191e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,28 +701,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23133fd4",
+   "execution_count": 21,
+   "id": "24e6e7db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8260084374556955\n"
+     ]
+    }
+   ],
    "source": [
     "train_predictions, train_acc = get_accuracy(n2o, train_dataset, train_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbccd355",
+   "execution_count": 31,
+   "id": "c87756ee",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "for i in range(5): \n",
+    "    test_dataset[i] = test_dataset[i].astype(np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1aee9a74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(5): \n",
+    "    valid_dataset[i] = valid_dataset[i].astype(np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e9089216",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3132904370978478\n"
+     ]
+    }
+   ],
    "source": [
     "test_predictions, test_acc = get_accuracy(n2o, test_dataset, test_labels)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "c02ebc84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.38340359440869753\n"
+     ]
+    }
+   ],
+   "source": [
+    "valid_predictions, valid_acc = get_accuracy(n2o, valid_dataset, valid_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "101dba11",
+   "id": "8ca3e505",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c35d345e",
+   "id": "913afb7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -469,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ffbed6",
+   "id": "db2cb1fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -477,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c30597",
+   "id": "c914aed2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +810,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56836d93",
+   "id": "35080f11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a3618a6",
    "metadata": {},
    "outputs": [],
    "source": []
