hparam search runs, accuracy does not change however

--- a/Bidirectional.ipynb
+++ b/Bidirectional.ipynb
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "305a8099",
+   "id": "dfa8a01d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0c5c242e",
+   "id": "a0aa89a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b20dd000",
+   "id": "f585967c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9689ecb3",
+   "id": "53420604",
    "metadata": {
     "scrolled": true
    },
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "d71d7b85",
+   "id": "67fa2f70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "fb9eda94",
+   "id": "8aa96bce",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "cc091de0",
+   "id": "d370957f",
    "metadata": {
     "scrolled": false
    },
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "ec0c11b3",
+   "id": "bd8e8ae2",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f537aa6a",
+   "id": "35f51ab1",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e13d714d",
+   "id": "d860d55f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "547dfcbc",
+   "id": "d3926773",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b107ca7",
+   "id": "096d2c44",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b8d413a",
+   "id": "c55f9408",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -890,24 +890,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "1517dbe4",
+   "execution_count": 99,
+   "id": "bba9035b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_classifier(bid = True, n2n_leakage = 0.05, **esn_params): \n",
-    "    i2n = InputToNode(hidden_layer_size=esn_args['hidden_layer_size'], input_activation=\"tanh\")\n",
+    "def make_classifier(esn_params, bid = True, n2n_leakage = 0.05): \n",
+    "    i2n = InputToNode(hidden_layer_size=esn_params['hidden_layer_size'], input_activation=\"tanh\")\n",
     "    \n",
     "    l1 = Pipeline([('i2n', i2n)])\n",
     "    \n",
-    "    n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=esn_args['hidden_layer_size'], leakage= n2n_leakage, bidirectional = bid)),\n",
-    "                   ('layer2', NodeToNode(hidden_layer_size=esn_args['hidden_layer_size'] * 2 ** bid, leakage= n2n_leakage, bidirectional = bid))])\n",
+    "    n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=esn_params['hidden_layer_size'], leakage= n2n_leakage, bidirectional = bid)),\n",
+    "                   ('layer2', NodeToNode(hidden_layer_size=esn_params['hidden_layer_size'] * 2 ** bid, leakage= n2n_leakage, bidirectional = bid))])\n",
     "    \n",
-    "    n2o = ESNClassifier(input_to_node=l1, node_to_node=n2n, **esn_params)\n",
-    "\n",
-    "    n2o.fit(train_dataset, train_labels_repeat)\n",
+    "    model = ESNClassifier(input_to_node=l1, node_to_node=n2n, **esn_params)\n",
     "    \n",
-    "    return n2o"
+    "    return model"
    ]
   },
   {
@@ -917,54 +915,78 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n",
+      "0.24175726647437323\n"
+     ]
+    }
+   ],
    "source": [
-    "initial_params = {'hidden_layer_size': 500, #1000 in 5C\n",
-    "                  'input_activation': 'tanh', #\n",
-    "                  'k_in' : 1,\n",
+    "initial_params = {'input_activation': 'tanh', #\n",
     "                  'bias_scaling': 0.0, # usually 0 \n",
     "                  'spectral_radius' : 0.0, # \n",
     "                  'reservoir_activation': 'tanh', # 2\n",
     "                  'leakage': 0.05, #equation 6, 17 frames should be 1 step \n",
-    "                  'bidirectional': True, #bidirectional \n",
-    "                  'k_rec': 500 / 10, # optimal is 200 for 1000 layer size \n",
     "                  'alpha': 0.1, # figure 6, tuned with k_in\n",
     "                  'random_state': 1, # \n",
     "                  'requires_sequence': True}\n",
     "\n",
     "# test k_rec and k_in\n",
     "\n",
-    "param_grid = {'k_rec': [500], \n",
-    "              'bidirectional': [False, True]}\n",
+    "param_grid = {'hidden_layer_size': [250, 500], \n",
+    "              'k_rec' : [5, 20, 50, 100], \n",
+    "              'k_in' : [1, 5, 10, 50]}\n",
     "\n",
-    "for params in ParameterGrid(param_grid):\n",
-    "    esn_cv = cross_validate(clone(b_esn).set_params(**params), \n",
-    "                            X=X_tr, y=y_tr,\n",
-    "                            scoring=make_scorer(accuracy_score))\n",
-    "    esn = clone(b_esn).set_params(**params).fit(X_tr, y_tr, n_jobs=1)\n",
-    "    acc_score = accuracy_score(test_, esn.predict(X_te))\n",
-    "    print(acc_score)\n"
+    "x = [] \n",
+    "\n",
+    "for i, params in enumerate(ParameterGrid(param_grid)):\n",
+    "    for k, v in params.items(): \n",
+    "        initial_params[k] = v\n",
+    "        \n",
+    "    model = make_classifier(initial_params)\n",
+    "    \n",
+    "    model.fit(train_dataset, train_labels_repeat)\n",
+    "    \n",
+    "    valid_predictions, valid_acc = get_accuracy(model, valid_dataset, valid_labels)\n",
+    "    \n",
+    "    print(valid_acc)\n",
+    "    \n",
+    "    x.append((valid_acc, param_grid))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c543266",
+   "id": "8733c223",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "\n",
-    "\n",
-    "esn = sequential_search.best_estimator_\n",
-    "\n",
-    "test_predictions, test_acc = get_accuracy(n2o, test_dataset, test_labels)\n",
-    "\n",
-    "test_cm = get_confusion_matrix(test_labels_repeat, test_predictions)\n",
-    "print(test_cm)\n",
-    "\n",
-    "cm_display = ConfusionMatrixDisplay(test_cm, display_labels=[0, 1, 2, 3, 4]).plot()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
