--- a/Bidirectional.ipynb
+++ b/Bidirectional.ipynb
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DATA_DIR = 'idrad'\n",
-    "DATA_DIR = '/Users/davidzhu/Desktop/IDRad/idrad'\n",
+    "DATA_DIR = 'idrad'\n",
+    "# DATA_DIR = '/Users/davidzhu/Desktop/IDRad/idrad'\n",
     "DEFAULT_FILE = 'train/target5_001.hdf5'"
    ]
   },
@@ -663,8 +663,8 @@
     "i2n = InputToNode(hidden_layer_size=layer_size, input_activation=\"tanh\")\n",
     "\n",
     "l1 = Pipeline([('i2n', i2n)])\n",
-    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer2_size, leakage=.05, bidirectional = bid)),\n",
-    "               ('layer2', NodeToNode(hidden_layer_size=layer2_size * 2 ** bid, leakage=.05, bidirectional = bid))])\n",
+    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer_size, leakage=.05, bidirectional = bid)),\n",
+    "               ('layer2', NodeToNode(hidden_layer_size=layer_size * 2 ** bid, leakage=.05, bidirectional = bid))])\n",
     "n2o = ESNClassifier(input_to_node=l1, node_to_node=n2n, **initial_params)\n",
     "\n",
     "n2o.fit(train_dataset, train_labels_repeat)"
@@ -696,9 +696,7 @@
    "cell_type": "code",
    "execution_count": 79,
    "id": "d370957f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1108,7 +1106,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1122,7 +1120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
